--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@oclif/core": "^4",
     "@salesforce/core": "^8",
-    "@salesforce/sf-plugins-core": "^12"
+    "@salesforce/sf-plugins-core": "^12",
+    "prettier": "^3.4.2",
+    "prettier-plugin-apex": "^2.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
