build: added files for command "rflib logging lwc instrument"

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
             "subtopics": {
               "apex": {
                 "description": "description for rflib.logging.apex"
+              },
+              "lwc": {
+                "description": "description for rflib.logging.lwc"
               }
             }
           }
