--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,6 @@ jobs:
       fail-fast: false
     with:
       os: ${{ matrix.os }}
+      setup: |
+        chmod +x ./bin/run.js
+        chmod +x ./bin/dev.js
