build: updated publishingConfig in package.json file

--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "prepare": "husky install"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "wireit": {
     "build": {
