chore(package): added volta config for node and yarn to be compatible with gh actions [skip-ci]

--- a/package.json
+++ b/package.json
@@ -207,5 +207,9 @@
   },
   "exports": "./lib/index.js",
   "type": "module",
-  "author": "Johannes Fischer"
+  "author": "Johannes Fischer",
+  "volta": {
+    "node": "20.17.0",
+    "yarn": "1.22.22"
+  }
 }
