build: created template for new command "sf rflib logging aura instrument"

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
               },
               "lwc": {
                 "description": "description for rflib.logging.lwc"
+              },
+              "aura": {
+                "description": "description for rflib.logging.aura"
               }
             }
           }
