--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@oclif/plugin-command-snapshot": "^5.2.26",
     "@salesforce/cli-plugins-testkit": "^5.3.10",
     "@salesforce/dev-scripts": "^10.2.11",
+    "ai-digest": "^1.0.7",
+    "c8": "^10.1.3",
     "eslint-plugin-sf-plugin": "^1.20.14",
     "husky": "^8.0.0",
     "oclif": "^4.17.13",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   },
   "engines": {
@@ -149,9 +154,10 @@
       ]
     },
     "test:only": {
-      "command": "nyc mocha \"test/**/*.test.ts\"",
+      "command": "c8 -r text -r html node --loader ts-node/esm ./node_modules/mocha/bin/mocha.js \"test/**/*.test.ts\"",
       "env": {
-        "FORCE_COLOR": "2"
+        "FORCE_COLOR": "2",
+        "TS_NODE_PROJECT": "./tsconfig.json"
       },
       "files": [
         "test/**/*.ts",
