--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "extends": "@salesforce/dev-config/tsconfig-strict-esm",
   "compilerOptions": {
+    "sourceMap": true,
+    "inlineSources": true,
+    "esModuleInterop": true,
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "moduleResolution": "Node16",
+    "module": "Node16"
   },
   "include": ["./src/**/*.ts"]
 }
