--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
       "output": []
     },
     "test:nuts": {
-      "command": "nyc mocha \"test/**/*.nut.ts\" --slow 4500 --timeout 600000",
+      "command": "c8 -r text -r html node --loader ts-node/esm ./node_modules/mocha/bin/mocha.js \"test/**/*.nut.ts\" --slow 4500 --timeout 600000",
       "dependencies": [
         "compile"
       ]
