build: generated new command rflib logging flow instrument

--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
               },
               "aura": {
                 "description": "Commands related to Aura logging"
+              },
+              "flow": {
+                "description": "description for rflib.logging.flow"
               }
             }
           }
