--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/xml2js": "^0.4.14",
     "prettier": "^3.5.3",
     "prettier-plugin-apex": "^2.2.6",
+    "wireit": "^0.14.12",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
