--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   unit-tests:
     strategy:
       matrix:
-        node_version: [22, 24]
+        node_version: [20, 22, 24]
         os: [ubuntu-latest, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
