--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   release:
-    uses: salesforcecli/github-workflows/.github/workflows/create-github-release.yml@main
+    uses: salesforcecli/github-workflows/.github/workflows/create-github-release.yml@faf1269ce04ec5cde922dfcb0320391b58f3cb02
     secrets:
       SVC_CLI_BOT_GITHUB_TOKEN: ${{ secrets.SVC_CLI_BOT_GITHUB_TOKEN }}
     with:
@@ -31,4 +31,4 @@ jobs:
   #   secrets:
   #     SVC_CLI_BOT_GITHUB_TOKEN: ${{ secrets.SVC_CLI_BOT_GITHUB_TOKEN }}
   #   if: ${{ github.ref_name == 'main' }}
-  #   uses: salesforcecli/github-workflows/.github/workflows/publishTypedoc.yml@main
+  #   uses: salesforcecli/github-workflows/.github/workflows/publishTypedoc.yml@faf1269ce04ec5cde922dfcb0320391b58f3cb02
