--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.release.tag_name || inputs.tag  }}
-      - uses: salesforcecli/github-workflows/.github/actions/getPreReleaseTag@main
+      - uses: salesforcecli/github-workflows/.github/actions/getPreReleaseTag@faf1269ce04ec5cde922dfcb0320391b58f3cb02
         id: distTag
   npm:
-    uses: salesforcecli/github-workflows/.github/workflows/npmPublish.yml@main
+    uses: salesforcecli/github-workflows/.github/workflows/npmPublish.yml@faf1269ce04ec5cde922dfcb0320391b58f3cb02
     needs: [getDistTag]
     with:
       tag: ${{ needs.getDistTag.outputs.tag || 'latest' }}
