--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@salesforce/core": "^8.26.2",
     "@salesforce/sf-plugins-core": "^12.2.6",
     "@types/xml2js": "^0.4.14",
+    "minimatch": "^10.2.2",
     "prettier": "^3.8.1",
     "prettier-plugin-apex": "^2.2.6",
     "wireit": "^0.14.12",
@@ -20,6 +21,7 @@
     "@oclif/plugin-command-snapshot": "^5.3.9",
     "@salesforce/cli-plugins-testkit": "^5.3.41",
     "@salesforce/dev-scripts": "^11.0.4",
+    "@types/minimatch": "^5.1.2",
     "c8": "^10.1.3",
     "eslint": "^8.57.1",
     "eslint-plugin-sf-plugin": "^1.20.33",
